--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,3 +3,5 @@ steps:
   args: ['package']
 - name: 'gcr.io/cloud-builders/mvn'
   args: ['fabric8:build']
+- name: 'gcr.io/cloud-builders/mvn'
+  args: ['fabric8:push']
