--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <maven-compiler-plugin.version>3.6.0</maven-compiler-plugin.version>
         <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
         <version.number>${git.commit.id.abbrev}</version.number>
-        <nexus.server>nexus-service:8081</nexus.server>
+        <nexus.server>nexus-service</nexus.server>
     </properties>
 
    
@@ -33,7 +33,7 @@
         <repository>
             <id>nexus</id>
             <!--<url>http://nexus:8081/nexus/content/groups/maven_group/</url>-->
-            <url>http://${nexus.server}/repository/maven-central/</url>
+            <url>http://${nexus.server}/repository/maven-public/</url>
         </repository>
     </repositories>
 
@@ -41,7 +41,7 @@
     <pluginRepositories>
         <pluginRepository>
             <id>nexus</id>
-            <url>http://${nexus.server}/repository/maven-central/</url>
+            <url>http://${nexus.server}/repository/maven-public/</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
